# aI_learning_assistant

./: .gitignore  README.md  learning_progress.json  main.py  progress.py  pyproject.toml
frontend/: app.js  index.html  style.css
tests/: test_progress.py
